--- a/SpringBootStarter/pom.xml
+++ b/SpringBootStarter/pom.xml
@@ -20,33 +20,26 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+			      <groupId>org.springframework.boot</groupId>
+			      <artifactId>spring-boot-maven-plugin</artifactId>
+			      <version>1.3.5.RELEASE</version>
+			      <configuration>
+			        <mainClass>${start-class}</mainClass>
+			        <layout>ZIP</layout>
+			      </configuration>
+			      <executions>
+			        <execution>
+			          <goals>
+			            <goal>repackage</goal>
+			          </goals>
+			        </execution>
+			      </executions>
+		    </plugin>
         </plugins>
+        <finalName>
+              settle            
+        </finalName>
     </build>
 
-    <!-- Add Spring repositories -->
-    <!-- (you don't need this if you are using a .RELEASE version) -->
-    <repositories>
-        <repository>
-            <id>spring-snapshots</id>
-            <url>http://repo.spring.io/snapshot</url>
-            <snapshots><enabled>true</enabled></snapshots>
-        </repository>
-        <repository>
-            <id>spring-milestones</id>
-            <url>http://repo.spring.io/milestone</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>spring-snapshots</id>
-            <url>http://repo.spring.io/snapshot</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>spring-milestones</id>
-            <url>http://repo.spring.io/milestone</url>
-        </pluginRepository>
-    </pluginRepositories>
+   
 </project>
